# gwc-learning

./: .gitignore  README.md  README.rst  datilografia.glade  datilografia.py  gwc.glade  main.py  main.spec  palavras.txt  pyproject.toml  requirements.txt
.github/workflows/: cy.yml
config/: imagens.json
datilografia/: __init__.py  datilografia.py
gwc/: __init__.py  dicionario.py  gwc.py  imagens.json  teclas.json  tools.py
scripts/: gerar_e_embaralhar_texto.py
scripts/textos/: palavras_nao_treinadas.txt
testes/: __init__.py  teste_interface.py  testes_datilografia.py  testes_gwc.py  texto_teste.txt
thread/: __init__.py  tread.py
