[tool.poetry]
name = "gwc-learning"
version = "0.1.0"
description = ""
authors = ["b166erobot <bernard0freitas@outlook.com>"]
readme = "README.md"
packages = [{include = "gwc_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
pycairo = "^1.23.0"
pygobject = "^3.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
