[tool.poetry]
name = "gwc-learning"
version = "0.1.0"
description = ""
authors = ["b166erobot <bernard0freitas@outlook.com>"]
readme = "README.md"
packages = [{include = "gwc_learning"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
